--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
-*.css linguist-detectable=false
-*.js linguist-detectable=true
+* linguist-vendored
+*.js linguist-vendored=false
